--- a/style.css
+++ b/style.css
@@ -1,43 +1,62 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+}
+
+
+
 input[type=text]:focus, input[type=password]:focus, input[type=email]:focus {
     background-color: #ddd;
     outline: none;
-
+  }
+  h1{
+    text-align: center;
+    font-size: 20px;
   }
   label{
       font-weight: bold;
-      font-size: 20px;
-      margin-right: 10px;
+      font-size: 14px;
+      display: block;
+      margin-top: 20px;
   }
   input[type=text], [type=email], [type=password]{
       margin: 0 auto;
       display: block;
-      width: 30%;
-      padding: 15px;
-      margin: 20px 0 10px 0;
+      width: 100%;
+      padding: 14px;
+      margin: 5px 0 2px 0;
       display: inline-block;
       border: none;
       background: #f1f1f1;
-      border-radius: 20px;
+      border-radius: 5px;
+      font-size: 14px;
   }
   button{
     display: block;
     background-color: #4CAF50;
     color: white;
     padding: 16px 20px;
-    margin: 8px 0;
+    margin: 30px 0 10px 0;
     border: none;
     cursor: pointer;
-    width: 20%;
+    width: 100%;
     opacity: 0.9;
+    border-radius: 5px;
   }
   button:hover {
     opacity: 1;
+
   }
   form{
       display: block;
       margin: 0 auto;
       text-align: left;
-      padding: 20px 0px 0px 50px;
+      justify-content: center;
+      width: 30%;
+      padding: 10px 0 200px;
+    }
   }
   .inputFirstName{
       display: block;
@@ -45,6 +64,35 @@ input[type=text]:focus, input[type=password]:focus, input[type=email]:focus {
   .name, .lastname, .adress, .email, .username, .password{
     display: block;
     color: rgb(255, 81, 81);  
-    font-size: 10px;
+    font-size: 12px;
     font-weight: bold; 
+    padding: 5px 10px;
   }
+  p{
+    font-size: 10px;
+    text-align: center;
+  }
+  .bold{
+    font-weight: bold;
+    text-decoration: underline;
+  }
+  .test{
+    display: flex;
+  }
+  .inputFirstName{
+    width: 45%;
+    margin-right: 10%;
+  }
+ .inputLastName{
+  width: 45%;
+  }
+.adbyps{
+  display: flex;
+}
+#postnr{
+  width: 35%;
+}
+#by{
+  width: 60%;
+  margin-right: 5%;
+}
