--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ input[type=text]:focus, input[type=password]:focus, input[type=email]:focus {
   h1{
     text-align: center;
     font-size: 20px;
+    margin-bottom: 5px;
   }
   label{
       font-weight: bold;
@@ -95,4 +96,11 @@ input[type=text]:focus, input[type=password]:focus, input[type=email]:focus {
 #by{
   width: 60%;
   margin-right: 5%;
+}
+hr{
+  width: 20%;
+  margin: 0 auto;
+  padding: 0.5px;
+  background-color: #4CAF50;
+  opacity: 0.9;
 }
